--- a/EqUiWebUi/Resources/defaultArea.resx
+++ b/EqUiWebUi/Resources/defaultArea.resx
@@ -117,8 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Alerts" xml:space="preserve">
+    <value>Alerts</value>
+  </data>
+  <data name="AlertsDescription" xml:space="preserve">
+    <value>Custom alert system</value>
+  </data>
   <data name="ShiftReport" xml:space="preserve">
     <value>Shiftreport</value>
+  </data>
+  <data name="ShiftReportDescription" xml:space="preserve">
+    <value>Contains stop longer than 20minutes combined downtime or more than 3 ocurences</value>
+  </data>
+  <data name="Supervision" xml:space="preserve">
+    <value>Supervision</value>
+  </data>
+  <data name="SupervisionDescription" xml:space="preserve">
+    <value>All items currently stopped and finised breakdowns</value>
   </data>
   <data name="SupervisionHeader" xml:space="preserve">
     <value>A shop supervision tools</value>
